horizontal scrollbar fixed

--- a/css/_featuredProjects.scss
+++ b/css/_featuredProjects.scss
@@ -6,6 +6,7 @@ $black : #000c14;
 $font-family : "Poppins",san-serif;
 
 .featured-projects{
+    overflow-x: hidden;
     width: 100%;
     height: auto;
     display: flex;
