--- a/css/main.scss
+++ b/css/main.scss
@@ -24,6 +24,9 @@
       color: $floral-white;
     }
 }
+body{
+  overflow-x: hidden;
+}
 li{
     list-style-type: none;
 }
@@ -39,6 +42,7 @@ media queries for large screens afterwards
  */
  .container {
     width: 100%;
+    overflow-x: hidden;
     //min-height: 80vh;
     background-color: $floral-white;
     padding: 30px;
